# dmlx

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  pydoc-markdown.yaml  pyproject.toml
.github/workflows/: publish.yml
src/dmlx/: component.py  context.py  experiment.py  property.py
test/: component_test.py  conftest.py  context_test.py  experiment_test.py
test_module/: __main__.py  trainer.py
test_module/dataset/: blah.py
test_module/model/: bar.py  baz.py  foo.py
