[project]
name = "dmlx"
version = "0.1.0"
description = "Declarative machine learning experiments."
readme = "README.md"
authors = [{ name = "3h" }]
requires-python = ">=3.10"
dependencies = ["click>=8.2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmlx"]

[tool.hatch.build.targets.sdist]
packages = ["src/dmlx"]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "ruff>=0.12.4"]

[tool.ruff.lint]
select = ["I", "F"]
